   block of text repeatedly and very efficiently
 - Use drawText() to manually draw text into a VBO or display list
 - See the Console mod for example usage; more examples will be provided soon
Changes to CampaignUtils:
 - Added getEntitiesWithRep(SectorEntityToken token, String entityTag,
   IncludeRep include, RepLevel rep)
Changes to CollisionUtils:
 - Added getNearestPointOnBounds(Vector2f source, CombatEntityAPI entity)
Changes to ColorUtils:
 - Added glColor(Color color, float alpha)
Changes to MathUtils:
 - Added clamp(float/int toClamp, float/int min, float/int max). This clamps
   the passed value within the given range. Variants are provided for both
   integers and floats.
 - Added getNearestPointOnLine(Vector2f source, Vector2f lineStart,
   Vector2f lineEnd)
 - Added getPoint(Vector2f center, float radius, float angle). This acts as an
   alias for the existing getPointOnCircumference(), which is both the most
   commonly used method in LazyLib as well as one of the most awkwardly named
Changes to ModUtils:
 - Added isModEnabled(String modId)
 - Added getEnabledModIds()
Changes to VectorUtils:
 - Added isZeroVector(Vector2f vector)
 - Added setLength(Vector2f vector, float length)
 - Added clampLength(Vector2f vector, float maxLength)
 - Added clampLength(Vector2f vector, float minLength, float maxLength)
Removed from SimpleEntity:
 - Removed Object constructor (it used reflection, which is now blocked;
   remaining options are Vector2f, WeaponAPI, and ShipEngineAPI)
Miscellaneous Javadoc improvements

 2.2 (April 21, 2017)
=======================
Updated to be compatible with Starsector 0.8a
LazyLib Javadoc now links to LWJGL, Starsector, and JSON Javadocs
Changes to CampaignUtils:
 - Removed crew XP level argument from addShipToFleet()

 2.1b (March 16, 2017)
=======================
Switched version file hosting to Bitbucket

 2.1 (November 19, 2015)
=========================
Changes to AnchoredEntity: